--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     font-family: orbit, sans-serif;
     text-align: center;
-    background: white;
+    background: wheat;
     box-sizing: border-box;
 }
 
