--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
 
 /*-- Global style --*/
 body {
-    width: 97%;
+    width: 100%;
+    height: 1000px;
     font-family: orbit, sans-serif;
     text-align: center;
     background: whitesmoke;
@@ -23,6 +24,12 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+    #main-heading {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
     #main-heading {
         width: 100%;
     }
@@ -48,12 +55,13 @@ body {
 }
 
 #board {
-
+    margin-left: -20%;
 }
 
 @media only screen and (max-width: 600px) {
     #board {
         width: 100%;
+        margin-left: 1px;
     }
 }
 
@@ -83,53 +91,24 @@ footer {
     margin-bottom: 100%;
 }
 
+@media only screen and (max-width: 600px) {
+    footer {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    footer {
+        width: 100%;
+    }
+}
+
 footer li {
-list-style: none;
-font-size: x-large;
-
-}
-
-
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-[class*="col-"] {
+    list-style: none;
+    display: inline-block;
+    margin-top: 20px;
     float: left;
-    padding: 15px;
+    margin-left: 15%;
 }
 
 
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-5 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
-  }
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
-  }
-  
