--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ body {
     position: relative;
     margin: 0 auto;
     margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -120,6 +121,17 @@ body {
     height: 50px;
     width: 100px;
     border-radius: 5px;
+}
+
+#record-score {
+    width: 40%;
+    margin: 0 auto;
+    background-color: rgb(255, 168, 0, 0.5);
+    border-radius: 5px;
+}
+
+#name-inst {
+    color: whitesmoke;
 }
 
 /* footer and media queries */
