add images for readme.md, complete readme.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: orbit, sans-serif;
     text-align: center;
     background: whitesmoke;
-    background: url('../images/jungle2.jpg') center center/ cover no-repeat fixed;
+    background: url('../images/jungle.jpg.jpg') center center/ cover no-repeat fixed;
     position: absolute;
 }
 
